--- a/ClientApp/src/app/distributions/distribution.component.html
+++ b/ClientApp/src/app/distributions/distribution.component.html
@@ -20,7 +20,7 @@
                 <td>{{d?.dateStart}}</td>
                 <td>{{d?.hours}}</td>
                 <td>
-                    <button class="btn btn-sm btn-primary" (click)="editWorker(d)">Изменить</button>
+                    <button class="btn btn-sm btn-primary" (click)="editDistribution(d)">Изменить</button>
                     <button class="btn btn-sm btn-danger" (click)="delete(d)">Удалить</button>
                 </td>
             </ng-template>
@@ -37,7 +37,7 @@
         <input type="number" [(ngModel)]="distribution.workerId" class="form-control" />
     </td>
     <td>
-        <input type="number" [(ngModel)]="distribution.projerctId" class="form-control" />
+        <input type="number" [(ngModel)]="distribution.projectId" class="form-control" />
     </td>
     <td>
         <input type="datetime" [(ngModel)]="distribution.dateStart" class="form-control" />
@@ -59,7 +59,7 @@
     </div>
     <div class="form-group">
         <label>project_id</label>
-        <input type="number" [(ngModel)]="distribution.projerctId" class="form-control" />
+        <input type="number" [(ngModel)]="distribution.projectId" class="form-control" />
     </div>
     <div class="form-group">
         <label>Начало</label>
