--- a/ClientApp/src/app/distributions/distribution.component.html
+++ b/ClientApp/src/app/distributions/distribution.component.html
@@ -6,7 +6,7 @@
             <td>id</td>
             <td>worker_id</td>
             <td>project_id</td>
-            <td>ННачало</td>
+            <td>Начало</td>
             <td>Часы</td>
             <td></td>
         </tr>
