--- a/ClientApp/src/app/distributions/distribution.component.html
+++ b/ClientApp/src/app/distributions/distribution.component.html
@@ -54,12 +54,12 @@
 <!--шаблон для добавления-->
 <ng-template #create>
     <div class="form-group">
-        <label>worker_id</label>
-        <input type="number" [(ngModel)]="distribution.workerId" class="form-control" />
+        <label>ФИО</label>
+        <input type="text" [(ngModel)]="distribution.workerFio" class="form-control" />
     </div>
     <div class="form-group">
-        <label>project_id</label>
-        <input type="number" [(ngModel)]="distribution.projectId" class="form-control" />
+        <label>Проект</label>
+        <input type="text" [(ngModel)]="distribution.projectName" class="form-control" />
     </div>
     <div class="form-group">
         <label>Начало</label>
