--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,8 +1,8 @@
 ﻿
     <button class="btn btn-sm btn-primary" (click)="runProjects()">Проекты</button>
     <button class="btn btn-sm btn-danger" (click)="runWorkers()">Сотрудники</button>
-    <button class="btn btn-sm btn-primary" (click)="runDistributions()">Возможные проекты</button>
-    <button class="btn btn-sm btn-danger" (click)="runWorkers()">Итоовая таблица</button>
+    <button class="btn btn-sm btn-primary" (click)="runDistributions()">Распределение</button>
+    <button class="btn btn-sm btn-danger" (click)="runPossibleProject()">Возможные проекты</button>
 
 
 <worker-comp *ngIf="isWorker"></worker-comp>
@@ -10,3 +10,5 @@
 <project-comp *ngIf="isProject"></project-comp>
 
 <distrib-comp *ngIf="isDistribution"></distrib-comp>
+
+<possible-comp *ngIf="isPossibleProject"></possible-comp>
