--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -2,7 +2,7 @@
     <button class="btn btn-sm btn-primary" (click)="runProjects()">Проекты</button>
     <button class="btn btn-sm btn-danger" (click)="runWorkers()">Сотрудники</button>
     <button class="btn btn-sm btn-primary" (click)="runDistributions()">Распределение</button>
-    <button class="btn btn-sm btn-danger" (click)="runPossibleProject()">Возможные проекты</button>
+    <!-- <button class="btn btn-sm btn-danger" (click)="runPossibleProject()">Возможные проекты</button> -->
 
 
 <worker-comp *ngIf="isWorker"></worker-comp>
@@ -11,4 +11,4 @@
 
 <distrib-comp *ngIf="isDistribution"></distrib-comp>
 
-<possible-comp *ngIf="isPossibleProject"></possible-comp>
+<!-- <possible-comp *ngIf="isPossibleProject"></possible-comp> -->
