--- a/ClientApp/src/app/distributions/distribution.component.html
+++ b/ClientApp/src/app/distributions/distribution.component.html
@@ -34,10 +34,18 @@
         {{distribution?.id}}
     </td>
     <td>
-        <input type="number" [(ngModel)]="distribution.workerId" class="form-control" />
+        <select class="form-control" name="workerFio" [(ngModel)]="distribution.workerFio">
+            <option  *ngFor="let workerFio of arrWorkerFio" [value]="workerFio">
+                {{workerFio}}
+            </option>
+        </select>
     </td>
     <td>
-        <input type="number" [(ngModel)]="distribution.projectId" class="form-control" />
+        <select class="form-control" name="projectName" [(ngModel)]="distribution.projectName">
+            <option  *ngFor="let projectName of arrProjectName" [value]="projectName">
+                {{projectName}}
+            </option>
+        </select>
     </td>
     <td>
         <input type="datetime" [(ngModel)]="distribution.dateStart" class="form-control" />
@@ -55,11 +63,19 @@
 <ng-template #create>
     <div class="form-group">
         <label>ФИО</label>
-        <input type="text" [(ngModel)]="distribution.workerFio" class="form-control" />
+        <select class="form-control" name="workerFio" [(ngModel)]="distribution.workerFio">
+            <option  *ngFor="let workerFio of arrWorkerFio" [value]="workerFio">
+                {{workerFio}}
+            </option>
+        </select>
     </div>
     <div class="form-group">
         <label>Проект</label>
-        <input type="text" [(ngModel)]="distribution.projectName" class="form-control" />
+        <select class="form-control" name="projectName" [(ngModel)]="distribution.projectName">
+            <option  *ngFor="let projectName of arrProjectName" [value]="projectName">
+                {{projectName}}
+            </option>
+        </select>
     </div>
     <div class="form-group">
         <label>Начало</label>
